# bkw_tracker

./: .gitignore  .gitmodules  .publishignore  PLAN.md  PUBLISH.md  README.md  compose.yml  pyproject.toml  setup.sh  stack.env.example
.github/workflows/: lint.yml  pages.yml
config/templates/: deye-bridge.env.tpl  export_solar_csv.py.tpl  solar.lovelace.yaml.tpl  solar.yaml.tpl  solar_baseline_value.py.tpl  solar_computed.yaml.tpl
config/topic_profiles/: canonical.env  deye.env
deye-bridge/: compose.yml  config.env.example
docs/: INVERTER_NOTES.md  MORNING_CHECKLIST.md  SCHEMA.md
homeassistant/lovelace/: solar.yaml
homeassistant/scripts/: export_solar_csv.py  solar_baseline_value.py
logger-resilience/: Dockerfile
mosquitto/: compose.yml
mosquitto/config/: mosquitto.conf
scripts/: configure_ha_mqtt.py  configure_ha_mqtt.sh  healthcheck.sh  install_ha_package.sh  install_healthcheck_cron.sh  probe_logger.py  release.sh  resilience_watcher.py  setup.sh  setup_mqtt_password.sh  smoke_read.py  stack.sh
scripts/resilience_lib/: logger_probe.py  quiet_hours.py  stack_env.py
tests/: test_logger_probe.py  test_quiet_hours.py  test_resilience_watcher.py  test_stack_env.py  test_write_env.py
