[project]
name = "bkw-tracker"
version = "0.1.0"
description = "Deye micro-inverter monitoring for Home Assistant via MQTT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pysolarmanv5",
]

[tool.uv]
package = false

[tool.uv.sources]
pysolarmanv5 = { path = "pysolarmanv5" }

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]
