[project]
name = "bkw-tracker"
version = "0.1.0"
description = "Deye micro-inverter monitoring for Home Assistant via MQTT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pysolarmanv5",
]

[tool.uv]
package = false

[tool.uv.sources]
pysolarmanv5 = { path = "pysolarmanv5" }

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["scripts", "homeassistant/scripts"]
exclude = ["pysolarmanv5"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (includes E501 line length)
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific
    "PTH", # flake8-use-pathlib
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "RET", # flake8-return
    "TC",  # flake8-type-checking (typing-only imports)
]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["T201"]  # print is fine in CLI/ops scripts
"homeassistant/scripts/**/*.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["resilience_lib"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
